--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           >
             <div class="slds-media__figure">
               <img
-                src="/images/lorem-logo.jpg"
+                src="images/lorem-logo.jpg"
                 class="slds-avatar_circle"
                 width="90px"
                 height="90px"
