--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <link
       rel="stylesheet"
       href="styles/salesforce-lightning-design-system.css"
@@ -95,16 +95,14 @@
         <h2>
           <span class="slds-assistive-text">warning</span>
           <span
-            class="slds-icon_container slds-icon-utility-warning slds-m-right--small"
+            class="slds-icon_container slds-icon-utility-warning slds-m-right--xx-small"
             title="Description of icon when needed"
           >
             <svg
-              class="slds-icon slds-icon-small warning-icon--color"
+              class="slds-icon slds-icon--small warning-icon--color"
               aria-hidden="true"
             >
-              <use
-                xlink:href="icons/utility-sprite/svg/symbols.svg#warning"
-              ></use>
+              <use xlink:href="icons/warning-icon.svg#warning"></use>
             </svg>
           </span>
           Lorem Company Pvt. Ltd. and MTX Group Inc. have one or more licenses
@@ -215,9 +213,7 @@
                       class="slds-icon slds-icon--small card-warning-icon--red"
                       aria-hidden="true"
                     >
-                      <use
-                        xlink:href="icons/utility-sprite/svg/symbols.svg#warning"
-                      ></use>
+                      <use xlink:href="icons/warning-icon.svg#warning"></use>
                     </svg>
                   </span>
                   Incomplete application
